@@ -4,6 +4,9 @@ Release ...
 * troff: Do not apply font-specific character translation inside \D,
   which led to wrong output e.g. with \D'l' with an OpenType font with
   the small caps feature activated (bug reported by Russ Cox).
+* troff: The "\X" and "\Y" escape sequences are no longer interpreted
+  in copy mode, as there is no case when this would be useful, and the
+  behavior now matches groff and Plan 9 troff.
 * dpost: Fixed a case in which invalid backslash sequences were generated
   when insane sizes appeared in intermediate troff input (bug reported by
   Russ Cox).
